--- a/views/meusAlugueis.ejs
+++ b/views/meusAlugueis.ejs
@@ -12,6 +12,13 @@
   </head>
 
   <body>
+    <!-- esse script pega a mensagem de erro na url e mostra no alert -->
+    <script>
+      const urlParams = new URLSearchParams(window.location.search);
+      const message = urlParams.get("alertMessage");
+      if (message) alert(message);
+    </script>
+    <!-------------------------------------------------------------->
     <header>
       <a href="#" class="logo"><i class="bx bx-plus-circle"></i>ChargerHelp</a>
     </header>
